--- a/scss/_gigs.scss
+++ b/scss/_gigs.scss
@@ -8,9 +8,11 @@
   }
   h3 {
     color: $medium-blue;
+    padding: 1rem 0;
     font-family: 'Advent Pro', sans-serif;
     font-size: 1.4em;
     text-align: center;
+    overflow-wrap: break-word;
   }
   h4 {
     color: $mauve;
@@ -29,10 +31,10 @@
     color: $white;
     font-size: 1.3rem;
     background: $navy;
-    padding: 1rem;
+    padding: 1rem 0;
   }
   .gig-event {
-    background: $white-smoke;
+    background: rgba($white-smoke, 0.7);
     border: solid;
     border-width: thin;
     border-color: $black;
